[gd_scene load_steps=16 format=4 uid="uid://b5ar68x6mtt4k"]

[ext_resource type="PackedScene" uid="uid://cwx0leap4p7mm" path="res://scene/player.tscn" id="1_80nbo"]
[ext_resource type="Texture2D" uid="uid://bftjlyenip5to" path="res://art/brick_16x16.png" id="1_e2o6t"]
[ext_resource type="Script" uid="uid://bemnphncshw6j" path="res://scripts/game.gd" id="1_feb5d"]
[ext_resource type="Resource" uid="uid://cuywce2cdmjlw" path="res://inventory/items/apple.tres" id="2_7jktm"]
[ext_resource type="Texture2D" uid="uid://jn76qemx5rba" path="res://art/slime.png" id="3_17rxn"]
[ext_resource type="Texture2D" uid="uid://hvu72ifcbkx1" path="res://art/ladder.png" id="3_yq8tf"]
[ext_resource type="PackedScene" uid="uid://mq2m0alaoyhn" path="res://scene/apple_collectible.tscn" id="6_ryrav"]
[ext_resource type="PackedScene" uid="uid://ba1n1eahq0qdf" path="res://scene/apple_tree.tscn" id="7_qpk70"]
[ext_resource type="PackedScene" uid="uid://dtc0ijhih4i5b" path="res://scene/heart_containers.tscn" id="8_ll5lq"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_17rxn"]
texture = ExtResource("3_17rxn")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_sng2h"]
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 0
sources/1 = SubResource("TileSetAtlasSource_17rxn")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_e2o6t"]
texture = ExtResource("1_e2o6t")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_feb5d"]
physics_layer_0/collision_layer = 1
sources/4 = SubResource("TileSetAtlasSource_e2o6t")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yq8tf"]
texture = ExtResource("3_yq8tf")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_ym5sv"]
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_yq8tf")

[node name="Game" type="Node2D"]
script = ExtResource("1_feb5d")
item = ExtResource("2_7jktm")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="heart_containers" parent="HUD" instance=ExtResource("8_ll5lq")]
texture_filter = 1
offset_left = 926.0
offset_top = 24.0
offset_right = 1026.0
scale = Vector2(2, 2)

[node name="Ouchies" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAPAAYAAAAAAAAAAAADAAUAAQAAAAAAAAADAAYAAQAAAAEAAAAEAAUAAQABAAAAAAAEAAYAAQABAAEAAAA=")
tile_set = SubResource("TileSet_sng2h")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
texture_filter = 1
tile_map_data = PackedByteArray("AAAOAAcABAAAAAAAAAAPAAcABAAAAAAAAAAQAAcABAAAAAAAAAARAAcABAAAAAAAAAASAAcABAAAAAAAAAATAAcABAAAAAAAAAAUAAcABAAAAAAAAAAVAAcABAAAAAAAAAAWAAcABAAAAAAAAAAWAAYABAAAAAAAAAAXAAYABAAAAAAAAAAXAAcABAAAAAAAAAAYAAcABAAAAAAAAAAUAAgABAAAAAAAAAATAAgABAAAAAAAAAASAAgABAAAAAAAAAARAAgABAAAAAAAAAAQAAgABAAAAAAAAAAPAAgABAAAAAAAAAAOAAgABAAAAAAAAAANAAgABAAAAAAAAAANAAcABAAAAAAAAAANAAYABAAAAAAAAAAMAAYABAAAAAAAAAAMAAcABAAAAAAAAAAMAAgABAAAAAAAAAAKAAgABAAAAAAAAAALAAgABAAAAAAAAAAJAAgABAAAAAAAAAAIAAgABAAAAAAAAAAHAAgABAAAAAAAAAAGAAgABAAAAAAAAAAFAAgABAAAAAAAAAAEAAgABAAAAAAAAAADAAgABAAAAAAAAAACAAgABAAAAAAAAAADAAcABAAAAAAAAAACAAcABAAAAAAAAAABAAcABAAAAAAAAAABAAgABAAAAAAAAAAAAAgABAAAAAAAAAAAAAcABAAAAAAAAAAAAAYABAAAAAAAAAAAAAUABAAAAAAAAAAAAAQABAAAAAAAAAAAAAMABAAAAAAAAAAAAAIABAAAAAAAAAAAAAEABAAAAAAAAAAAAAAABAAAAAAAAAAVAAgABAAAAAAAAAAWAAgABAAAAAAAAAAXAAgABAAAAAAAAAAYAAgABAAAAAAAAAAZAAgABAAAAAAAAAAZAAcABAAAAAAAAAAaAAcABAAAAAAAAAAaAAgABAAAAAAAAAAbAAgABAAAAAAAAAAcAAgABAAAAAAAAAAdAAgABAAAAAAAAAAdAAcABAAAAAAAAAAdAAYABAAAAAAAAAAdAAUABAAAAAAAAAAdAAQABAAAAAAAAAAdAAMABAAAAAAAAAAdAAIABAAAAAAAAAAdAAEABAAAAAAAAAAdAAAABAAAAAAAAAAEAAcABAAAAAAAAAALAAcABAAAAAAAAAAKAAcAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAIAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_feb5d")

[node name="Ladders" type="TileMapLayer" parent="."]
texture_filter = 1
tile_map_data = PackedByteArray("AAAKAAcAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAIAAAAAAAAAAAADAAYAAAAAAAAAAAADAAUAAAAAAAAAAAADAAQAAAAAAAAAAAADAAMAAAAAAAAAAAADAAIAAAAAAAAAAAADAAEAAAAAAAAAAAADAAAAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_ym5sv")

[node name="player" parent="." instance=ExtResource("1_80nbo")]
position = Vector2(289, 95)

[node name="Camera2D" type="Camera2D" parent="player"]
position = Vector2(7, -43)
zoom = Vector2(3, 3)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(279, -31)

[node name="apple_collectible" parent="." instance=ExtResource("6_ryrav")]
position = Vector2(32, 102)

[node name="apple_collectible2" parent="." instance=ExtResource("6_ryrav")]
position = Vector2(91, 115)

[node name="apple_collectible3" parent="." instance=ExtResource("6_ryrav")]
position = Vector2(445, 115)

[node name="apple_collectible4" parent="." instance=ExtResource("6_ryrav")]
position = Vector2(377, 72)

[node name="apple_tree" parent="." instance=ExtResource("7_qpk70")]
position = Vector2(137, 112)

[node name="apple_tree2" parent="." instance=ExtResource("7_qpk70")]
position = Vector2(204, 80)

[node name="apple_tree2" parent="apple_tree2" instance=ExtResource("7_qpk70")]
position = Vector2(207, 15)

[connection signal="shoot" from="player" to="." method="_on_player_shoot"]
